--- a/zadanie-sass-git/zadanie-sass-przed/scss/modules/_dividers.scss
+++ b/zadanie-sass-git/zadanie-sass-przed/scss/modules/_dividers.scss
@@ -9,7 +9,7 @@ hr {
 }
 
 hr.divider-light-dark {
-    width: $baseline + 1;
+    width: 150px;
     border-color: $color-primary;
     border-width: 3px;
     opacity: 50%;
