--- a/zadanie-sass-git/zadanie-sass-przed/scss/theme/_one-page.scss
+++ b/zadanie-sass-git/zadanie-sass-przed/scss/theme/_one-page.scss
@@ -23,9 +23,10 @@
                 width: 96px;
                 height: 96px;
                 border-radius: 50%;
-                 line-height: $base-font-size * 4.5;
+                //  line-height: $base-font-size * 4.5;
                 // background-color: green;
-                 margin: $margin-none auto $baseline;
+                //  margin: $margin-none auto $baseline;
+                 line-height: 96px;
             }
         }
 	}
@@ -193,7 +194,8 @@
             }
 
             .divider-light-dark {
-                width: $baseline * 2;
+                width: 25px;
+                opacity: 50%;
                 margin-left: $padding-none;
                 margin-bottom: 20px;
             }
